--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ font-variation-settings:
 }*/
 
 .molle-regular-italic {
-  font-family: "Molle", cursive;
+  font-family: "Molle", serif;
   font-weight: 400;
   font-style: italic;
 }
